--- a/pom.xml
+++ b/pom.xml
@@ -35,12 +35,12 @@
   <packaging>maven-archetype</packaging>
 
   <name>wcm.io Maven Archetype for AEM Configuration Management</name>
-  <description>Maven Archetype for creating an infrastructure deployment and configuration management projects for AEM.</description>
+  <description>Maven Archetype for creating infrastructure deployment and configuration management projects for AEM.</description>
   <url>${site.url}/${site.url.module.prefix}/</url>
 
   <properties>
     <site.url.module.prefix>tooling/maven/archetypes/aem-confmgmt</site.url.module.prefix>
-    <maven.archetype.version>3.0.1</maven.archetype.version>
+    <maven.archetype.version>3.0.2-180806-A536</maven.archetype.version>
     <!-- Control execution of archetype integration tests via -Pfast or -Dmaven.test.skip -->
     <archetype.test.skip>${integrationtests.skip}</archetype.test.skip>
   </properties>
