--- a/src/main/resources/archetype-resources/vagrant/Vagrantfile
+++ b/src/main/resources/archetype-resources/vagrant/Vagrantfile
@@ -64,7 +64,7 @@ Vagrant.configure(VAGRANTFILE_API_VERSION) do |config|
     # galaxy settings
     ansible.galaxy_role_file = "requirements.yml"
     ansible.galaxy_roles_path = "/home/vagrant/.ansible/roles"
-    ansible.galaxy_command = "ansible-galaxy install --role-file=%{role_file} --roles-path=%{roles_path}"
+    ansible.galaxy_command = "ansible-galaxy install --role-file=%{role_file} --roles-path=%{roles_path} --force"
     # playbook settings
     ansible.inventory_path = "inventory/local"
     ansible.playbook = "playbook-setup-controlhost.yml"
