Add project tag to ec2 query

--- a/src/main/resources/archetype-resources/ansible/include-prepare-inventory.yml
+++ b/src/main/resources/archetype-resources/ansible/include-prepare-inventory.yml
@@ -16,6 +16,7 @@
             filters:
               instance-state-name: running
               "tag:Role": aem
+              "tag:Project": "${configurationManagementName}"
             region: "{{ aws_region }}"
           register: ec2_facts_aem
 
