--- a/src/main/resources/archetype-resources/configuration/src/main/environments/dev.yaml
+++ b/src/main/resources/archetype-resources/configuration/src/main/environments/dev.yaml
@@ -78,7 +78,7 @@ config:
       adminAccessFromIp: #foreach( $ip in $accessRestrictionIpAddress.split(",") )$ip#if($foreach.hasNext) #end#end
 
 #end
-      dispatcherFlushFromIp: 127.0.0.1 #if($optionAnsible=="y")${symbol_dollar}{ansible-inventory::${symbol_dollar}._meta.hostvars..[?(@.ec2_tag_Name == 'dev_aem')].ec2_private_ip_address}#end
+      dispatcherFlushFromIp: 127.0.0.1 #if($optionAnsible=="y")${symbol_dollar}{ansible-inventory::${symbol_dollar}._meta.hostvars..[?(@.ec2_tag_Name == 'dev_aem' && @.ec2_tag_Project == '${configurationManagementName}')].ec2_private_ip_address}#end
 
     ssl:
       certificateFile: /etc/ssl/certs/${node}.crt
