--- a/src/main/resources/archetype-resources/configuration/src/main/environments/prod.yaml
+++ b/src/main/resources/archetype-resources/configuration/src/main/environments/prod.yaml
@@ -35,7 +35,7 @@ nodes:
       httpd:
         serverName: ${node}
         accessRestriction:
-          dispatcherFlushFromIp: 127.0.0.1 #if($optionAnsible=="y")${symbol_dollar}{ansible-inventory::${symbol_dollar}._meta.hostvars..[?(@.ec2_tag_Name == 'prod_author1')].ec2_private_ip_address}#end
+          dispatcherFlushFromIp: 127.0.0.1 #if($optionAnsible=="y")${symbol_dollar}{ansible-inventory::${symbol_dollar}._meta.hostvars..[?(@.ec2_tag_Name == 'prod_author1' && @.ec2_tag_Project == '${configurationManagementName}')].ec2_private_ip_address}#end
 
         ssl:
           certificateFile: /etc/ssl/certs/${node}.crt
@@ -108,6 +108,6 @@ tenants:
       - www.website1.com
       rootRedirect.url: /en.html
       accessRestriction:
-        dispatcherFlushFromIp: 127.0.0.1 #if($optionAnsible=="y")${symbol_dollar}{ansible-inventory::${symbol_dollar}._meta.hostvars..[?(@.ec2_tag_Name == 'prod_publish1')].ec2_private_ip_address} ${symbol_dollar}{ansible-inventory::${symbol_dollar}._meta.hostvars..[?(@.ec2_tag_Name == 'prod_publish2')].ec2_private_ip_address}#end
+        dispatcherFlushFromIp: 127.0.0.1 #if($optionAnsible=="y")${symbol_dollar}{ansible-inventory::${symbol_dollar}._meta.hostvars..[?(@.ec2_tag_Name == 'prod_publish1' && @.ec2_tag_Project == '${configurationManagementName}')].ec2_private_ip_address} ${symbol_dollar}{ansible-inventory::${symbol_dollar}._meta.hostvars..[?(@.ec2_tag_Name == 'prod_publish2' && @.ec2_tag_Project == '${configurationManagementName}')].ec2_private_ip_address}#end
 
     sling.mapping.rootPath: /content/${projectName}
