--- a/src/main/resources/archetype-resources/ansible/requirements.yml
+++ b/src/main/resources/archetype-resources/ansible/requirements.yml
@@ -10,8 +10,10 @@
   version: 4.0.0
 - src: geerlingguy.repo-epel
   version: 1.2.3
+#if( $optionTerraform=="y" )
 - src: andrewrothstein.terraform
   version: v2.2.10
+#end
 
 #
 # wcm-io-devops requirements
