use environments files when terraform is not available

--- a/src/main/resources/archetype-resources/ansible/include-prepare-inventory.yml
+++ b/src/main/resources/archetype-resources/ansible/include-prepare-inventory.yml
@@ -1,3 +1,4 @@
+#if( $optionTerraform=="y" )
 - name: "generate inventory (ec2)"
   hosts: "&ec2:&tag_Project_${configurationManagementName}:&tag_Env_{{ conga_environment }}"
   gather_facts: no
@@ -41,6 +42,7 @@
         block: "{{ conga_node_ip_mapping_private | join('\n') }}"
         marker: "# {mark} conga_node to ip mapping - ANSIBLE MANAGED BLOCK"
 
+#end
 - name: "generate inventory (local)"
   hosts: "&local:&tag_Project_${configurationManagementName}:&tag_Env_{{ conga_environment }}"
   gather_facts: no
