--- a/src/test/resources/projects/delta-no-terraform-no-vagrant-no-ansible/archetype.properties
+++ b/src/test/resources/projects/delta-no-terraform-no-vagrant-no-ansible/archetype.properties
@@ -21,5 +21,5 @@ aemLicensePropertiesFile=license.properties
 
 # feature flags
 optionVagrant=n
-optionTerraformAws=n
+optionTerraform=n
 optionAnsible=n
