--- a/src/main/resources/archetype-resources/ansible/ansible.cfg
+++ b/src/main/resources/archetype-resources/ansible/ansible.cfg
@@ -3,7 +3,11 @@ vault_password_file = ~/.ansible/.vault_pass
 host_key_checking = False
 retry_files_enabled = False
 callback_whitelist = profile_tasks
+#if( $optionTerraform=="y" )
 inventory = inventory/ec2.py
+#else
+inventory = local
+#end
 
 [ssh_connection]
 pipelining = True
