--- a/src/test/resources/projects/alpha-all/archetype.properties
+++ b/src/test/resources/projects/alpha-all/archetype.properties
@@ -21,5 +21,5 @@ aemLicensePropertiesFile=license.properties
 
 # feature flags
 optionVagrant=y
-optionTerraformAws=y
+optionTerraform=y
 optionAnsible=y
