--- a/src/test/resources/projects/beta-no-vagrant/archetype.properties
+++ b/src/test/resources/projects/beta-no-vagrant/archetype.properties
@@ -21,5 +21,5 @@ aemLicensePropertiesFile=license.properties
 
 # feature flags
 optionVagrant=n
-optionTerraformAws=y
+optionTerraform=y
 optionAnsible=y
