--- a/src/test/resources/projects/beta-no-vagrant/archetype.properties
+++ b/src/test/resources/projects/beta-no-vagrant/archetype.properties
@@ -14,6 +14,7 @@ aemAdminPassword=it_admin
 accessRestrictionIpAddress=0.0.0.0/0
 ansibleVaultPassword=beta-vault
 awsRegion=eu-west-1
+awsMachineSize=medium
 
 # file references
 sshPublicKeyFile=id_rsa.pub
