--- a/src/test/resources/projects/alpha-all/archetype.properties
+++ b/src/test/resources/projects/alpha-all/archetype.properties
@@ -14,6 +14,7 @@ aemAdminPassword=it_admin
 accessRestrictionIpAddress=200.10.10.1/16,200.20.20.1/18
 ansibleVaultPassword=alpha-vault
 awsRegion=eu-west-1
+awsMachineSize=lage
 
 # file references
 sshPublicKeyFile=id_rsa.pub
