--- a/src/test/resources/projects/delta-no-terraform-no-vagrant-no-ansible/archetype.properties
+++ b/src/test/resources/projects/delta-no-terraform-no-vagrant-no-ansible/archetype.properties
@@ -14,6 +14,7 @@ aemAdminPassword=it_admin
 accessRestrictionIpAddress=0.0.0.0/0
 ansibleVaultPassword=nopassword
 awsRegion=eu-west-1
+awsMachineSize=small
 
 # file references
 sshPublicKeyFile=id_rsa.pub
