Fix sling.mapping.rootPath in prod environment

--- a/src/main/resources/archetype-resources/configuration/src/main/environments/prod.yaml
+++ b/src/main/resources/archetype-resources/configuration/src/main/environments/prod.yaml
@@ -121,4 +121,4 @@ tenants:
       accessRestriction:
         dispatcherFlushFromIp: 127.0.0.1#if($optionAnsible=="y") ${symbol_dollar}{stringUtils:join(inventory.publishHosts,' ')}#end
 
-    sling.mapping.rootPath: /content/aem-fe-archetype
+    sling.mapping.rootPath: /content/${projectName}
