always generate crypto keys when optionAnsible is active

--- a/src/main/resources/archetype-resources/configuration/src/main/roles/__projectName__-aem-cms-combined.yaml
+++ b/src/main/resources/archetype-resources/configuration/src/main/roles/__projectName__-aem-cms-combined.yaml
@@ -11,7 +11,7 @@ variants:
 config:
   contentPackage.group: ${projectName}
   crypto:
-#if ($optionVagrant=="y")
+#if ($optionAnsible=="y")
     # URLs of crypto keys to be deployed to AEM (as bundle files)
     aesCryptoKeyUrl: ansible-vault:classpath:/crypto/master
     hmacCryptoKeyUrl: ansible-vault:classpath:/crypto/hmac
