--- a/src/main/resources/archetype-resources/ansible/include-setup-aem-cms.yml
+++ b/src/main/resources/archetype-resources/ansible/include-setup-aem-cms.yml
@@ -20,7 +20,7 @@
         aem_cms_home: "{{ conga_config.quickstart.rootPath }}"
 
   roles:
-    - { role: geerlingguy.swap, swap_file_size_mb: '1024' }
+    - { role: geerlingguy.swap, swap_file_size_mb: '1024', tags: ['swap'] }
     - {
         role: wcm_io_devops.aem_cms,
         tags: ['dev.aem_cms']
