--- a/src/main/resources/archetype-resources/ansible/include-prepare-inventory.yml
+++ b/src/main/resources/archetype-resources/ansible/include-prepare-inventory.yml
@@ -43,9 +43,8 @@
         marker: "# {mark} conga_node to ip mapping - ANSIBLE MANAGED BLOCK"
 
 #end
-- name: "generate inventory (local)"
-  hosts: "&local:&tag_Project_${configurationManagementName}:&tag_Env_{{ conga_environment }}"
-  gather_facts: no
+- name: "generate inventory (not ec2)"
+  hosts: "&not_ec2:&tag_Project_${configurationManagementName}:&tag_Env_{{ conga_environment }}"
   become: yes
   tags:
     - prepare-inventory
@@ -54,8 +53,23 @@
       set_fact:
         conga_node_ip_mapping_private: []
 
-    - name: update hosts file
+    - name: "Get ip adresses and defined 'conga_nodes' of all hosts in play."
+      set_fact:
+        conga_node_ip_mapping_private: "{{ conga_node_ip_mapping_private + [hostvars[item]['ansible_default_ipv4']['address']+' '+hostvars[item].conga_nodes | join(' ')] }}"
+      with_items: "{{ hostvars }}"
+      when:
+        - hostvars[item].conga_nodes is defined
+        - hostvars[item].ansible_default_ipv4 is defined
+        - item != inventory_hostname
+
+    - name: "Convert conga_node ip mapping list to a string."
+      set_fact:
+        conga_node_ip_mapping_private_str: "{{ conga_node_ip_mapping_private | join ('\n') }}"
+
+    - name: "Update hosts file."
       blockinfile:
         path: /etc/hosts
-        block: "127.0.0.1 {{ conga_nodes | join(' ') }}"
+        block: |
+          127.0.0.1 {{ conga_nodes | join(' ') }}
+          {{ conga_node_ip_mapping_private_str }}
         marker: "# {mark} conga_node to ip mapping - ANSIBLE MANAGED BLOCK"
