Only create swap when no swap exists

--- a/src/main/resources/archetype-resources/ansible/include-setup-aem-cms.yml
+++ b/src/main/resources/archetype-resources/ansible/include-setup-aem-cms.yml
@@ -20,7 +20,12 @@
         aem_cms_home: "{{ conga_config.quickstart.rootPath }}"
 
   roles:
-    - { role: geerlingguy.swap, swap_file_size_mb: '1024', tags: ['swap'] }
+    - {
+        role: geerlingguy.swap,
+        swap_file_size_mb: '1024',
+        tags: ['swap'],
+        when: ansible_swaptotal_mb == 0 # only create swap when no swap exists
+      }
     - {
         role: wcm_io_devops.aem_cms,
         tags: ['dev.aem_cms']
