Do not use proxy for dispatcher smoke-test and flush

--- a/src/main/resources/archetype-resources/ansible/group_vars/all/aem_dispatcher_flush.yml
+++ b/src/main/resources/archetype-resources/ansible/group_vars/all/aem_dispatcher_flush.yml
@@ -1,2 +1,5 @@
 # allow self signed certificates for dispatcher flush
 aem_dispatcher_flush_insecure: true
+
+# do not use a proxy for dispatcher flush
+aem_dispatcher_flush_noproxy: true
