--- a/src/main/resources/archetype-resources/ansible/group_vars/all/conga_aem_dispatcher_smoke_test.yml
+++ b/src/main/resources/archetype-resources/ansible/group_vars/all/conga_aem_dispatcher_smoke_test.yml
@@ -1,2 +1,5 @@
 # allow self signed certificates for dispatcher flush
 conga_aemdst_curl_allow_insecure: true
+
+# do not use a proxy when executing the smoke test
+conga_aemdst_curl_noproxy: true
