--- a/src/test/resources/projects/alpha-all/archetype.properties
+++ b/src/test/resources/projects/alpha-all/archetype.properties
@@ -13,8 +13,15 @@ mavenRepositoryPassword=it_maven_password
 aemAdminPassword=it_admin
 accessRestrictionIpAddress=200.10.10.1/16,200.20.20.1/18
 ansibleVaultPassword=alpha-vault
+
+# AWS settings
 awsRegion=eu-west-1
 awsMachineSize=lage
+
+# Java SDK
+javaMajorVersion=8
+javaMinorVersion=181
+javaDownloadBaseUrl=http://download.oracle.com/otn-pub/java
 
 # file references
 sshPublicKeyFile=id_rsa.pub
