--- a/src/test/resources/projects/gamma-no-terraform-no-vagrant/archetype.properties
+++ b/src/test/resources/projects/gamma-no-terraform-no-vagrant/archetype.properties
@@ -13,8 +13,15 @@ mavenRepositoryPassword=it_maven_password
 aemAdminPassword=it_admin
 accessRestrictionIpAddress=0.0.0.0/0
 ansibleVaultPassword=gamma-vault
+
+# AWS settings
 awsRegion=eu-west-1
 awsMachineSize=medium
+
+# Java SDK
+javaMajorVersion=8
+javaMinorVersion=181
+javaDownloadBaseUrl=http://download.oracle.com/otn-pub/java
 
 # file references
 sshPublicKeyFile=id_rsa.pub
