Update requirements to release versions

--- a/src/main/resources/archetype-resources/ansible/requirements.yml
+++ b/src/main/resources/archetype-resources/ansible/requirements.yml
@@ -18,75 +18,39 @@
 #
 # wcm-io-devops requirements
 #
-- src: https://github.com/wcm-io-devops/ansible-aem-cms.git
-  name: wcm_io_devops.aem_cms
-  scm: git
-  version: b17119ed89935fb6eb1758d54a0de612954d713b
-- src: https://github.com/wcm-io-devops/ansible-aem-dispatcher.git
-  name: wcm_io_devops.aem_dispatcher
-  scm: git
-  version: 254ea94582f078827ca1f83185862bebe0f018cb
-- src: https://github.com/wcm-io-devops/ansible-aem-dispatcher-flush.git
-  name: wcm_io_devops.aem_dispatcher_flush
-  scm: git
-  version: b721a91ed761a8551492221809d2db06297335ab
-- src: https://github.com/wcm-io-devops/ansible-aem-security.git
-  name: wcm_io_devops.aem_security
-  scm: git
-  version: 14e6c5ffa322b11ca4f8bf5c381491297140a615
-- src: https://github.com/wcm-io-devops/ansible-aem-service.git
-  name: wcm_io_devops.aem_service
-  scm: git
-  version: 3c82cd041d52a871263c8ce3ec4072b86ecf93d4
-- src: https://github.com/wcm-io-devops/ansible-conga-aem-cms.git
-  name: wcm_io_devops.conga_aem_cms
-  scm: git
-  version: d197dabf33326a915d3d2c3938f654813a5ce2d5
-- src: https://github.com/wcm-io-devops/ansible-conga-bundle-files.git
-  name: wcm_io_devops.conga_bundle_files
-  scm: git
-  version: 2ab0e2b8c70f1aabe5a5e7aa1bdac6397a490fd0
-- src: https://github.com/wcm-io-devops/ansible-conga-aem-dispatcher.git
-  name: wcm_io_devops.conga_aem_dispatcher
-  scm: git
-  version: 1c41ce460451c3144d2899f890315c780317f9fd
-- src: https://github.com/wcm-io-devops/ansible-conga-aem-dispatcher-flush.git
-  name: wcm_io_devops.conga_aem_dispatcher_flush
-  scm: git
-  version: 4919774cbee506b11b57cbbd6630b37e2202796d
-- src: https://github.com/wcm-io-devops/ansible-conga-aem-dispatcher-smoke-test.git
-  name: wcm_io_devops.conga_aem_dispatcher_smoke_test
-  scm: git
-  version: bf5bf9b3dc70114a7215f1466c77cc727fc86d37
-- src: https://github.com/wcm-io-devops/ansible-conga-aem-packages.git
-  name: wcm_io_devops.conga_aem_packages
-  scm: git
-  version: 01c1261825ff6c5911b6cf649756bc23731cec92
-- src: https://github.com/wcm-io-devops/ansible-conga-aem-smoke-test.git
-  name: wcm_io_devops.conga_aem_smoke_test
-  scm: git
-  version: a9e99b5084813d5605859dc4e2ffd2a7ed540727
-- src: https://github.com/wcm-io-devops/ansible-conga-ansible-controlhost.git
-  name: wcm_io_devops.conga_ansible_controlhost
-  scm: git
+- name: wcm_io_devops.aem_cms
+  version: 1.0.0
+- name: wcm_io_devops.aem_dispatcher
+  version: 1.0.0
+- name: wcm_io_devops.aem_dispatcher_flush
+  version: 1.0.0
+- name: wcm_io_devops.aem_security
+  version: 1.0.0
+- name: wcm_io_devops.aem_service
+  version: 1.0.0
+- name: wcm_io_devops.conga_aem_cms
+  version: 1.0.0
+- name: wcm_io_devops.conga_bundle_files
+  version: 1.0.0
+- name: wcm_io_devops.conga_aem_dispatcher
+  version: 1.0.0
+- name: wcm_io_devops.conga_aem_dispatcher_flush
+  version: 1.0.0
+- name: wcm_io_devops.conga_aem_dispatcher_smoke_test
+  version: 1.0.0
+- name: wcm_io_devops.conga_aem_packages
+  version: 1.0.0
+- name: wcm_io_devops.conga_aem_smoke_test
+  version: 1.0.0
+- name: wcm_io_devops.conga_ansible_controlhost
   version: master
-- src: https://github.com/wcm-io-devops/ansible-conga-maven.git
-  name: wcm_io_devops.conga_maven
-  scm: git
-  version: a4c4b7d511d863855cd8e99701d740cc734bf2f4
-- src: https://github.com/wcm-io-devops/ansible-conga-facts.git
-  name: wcm_io_devops.conga_facts
-  scm: git
-  version: 7b0df959ead75552910296470127e116ad16ccef
-- src: https://github.com/wcm-io-devops/ansible-conga-files.git
-  name: wcm_io_devops.conga_files
-  scm: git
-  version: 8c93d9229e0b461a68755c14bc4b1655f12dacf9
-- src: https://github.com/wcm-io-devops/ansible-conga-host-facts.git
-  name: wcm_io_devops.conga_host_facts
-  scm: git
-  version: 6c92e58cd65a00de049f7043b45298e8f70c676c
-- src: https://github.com/wcm-io-devops/ansible-role-apache.git
-  name: wcm_io_devops.apache
-  scm: git
-  version: caeb926a686e74e284dc6b4877a0911f9e29a589
+- name: wcm_io_devops.conga_maven
+  version: 1.0.0
+- name: wcm_io_devops.conga_facts
+  version: 1.0.0
+- name: wcm_io_devops.conga_files
+  version: 1.0.0
+- name: wcm_io_devops.conga_host_facts
+  version: 1.0.0
+- name: wcm_io_devops.apache
+  version: 3.0.0-1
