reference files from current directory

--- a/src/test/resources/projects/alpha-all/archetype.properties
+++ b/src/test/resources/projects/alpha-all/archetype.properties
@@ -24,8 +24,8 @@ javaMinorVersion=181
 javaDownloadBaseUrl=http://download.oracle.com/otn-pub/java
 
 # file references
-sshPublicKeyFile=id_rsa.pub
-aemLicensePropertiesFile=license.properties
+sshPublicKeyFile=../id_rsa.pub
+aemLicensePropertiesFile=../license.properties
 
 # feature flags
 optionVagrant=y
