Fix setting of maven repository user/password in vault_credentials.yml.

--- a/src/main/resources/archetype-resources/ansible/group_vars/all/vault_credentials.yml
+++ b/src/main/resources/archetype-resources/ansible/group_vars/all/vault_credentials.yml
@@ -1,7 +1,9 @@
 # Username for maven repository
-vault_maven_repository_username: ${mavenRepositoryUser}
+vault_maven_repository_username: #if($mavenRepositoryUser!='__not_set__')${mavenRepositoryUser}#end
+
 # Password for maven repository
-vault_maven_repository_password: ${mavenRepositoryPassword}
+vault_maven_repository_password: #if($mavenRepositoryPassword!='__not_set__')${mavenRepositoryPassword}#end
+
 
 # Password for AEM "admin" user and felix console
 vault_aem_admin_password: ${aemAdminPassword}
