Add host file creation on controlhost for non ec2 environments

--- a/src/main/resources/archetype-resources/ansible/include-prepare-inventory.yml
+++ b/src/main/resources/archetype-resources/ansible/include-prepare-inventory.yml
@@ -73,3 +73,10 @@
           127.0.0.1 {{ conga_nodes | join(' ') }}
           {{ conga_node_ip_mapping_private_str }}
         marker: "# {mark} conga_node to ip mapping - ANSIBLE MANAGED BLOCK"
+
+    - name: "Write hostfile info to controlhost."
+      copy:
+        content: |
+          127.0.0.1 {{ conga_nodes | join(' ') }}
+          {{ conga_node_ip_mapping_private_str }}
+        dest: "{{ playbook_dir }}/files/tmp/hosts_{{ conga_environment }}"
