--- a/src/main/resources/archetype-resources/vagrant/Vagrantfile
+++ b/src/main/resources/archetype-resources/vagrant/Vagrantfile
@@ -33,6 +33,9 @@ Vagrant.configure(VAGRANTFILE_API_VERSION) do |config|
   config.vm.network :forwarded_port, guest: 4502, host: 4502, id: 'aem-author'
   config.vm.network :forwarded_port, guest: 4503, host: 4503, id: 'aem-publish'
 
+  # force auto update of VirtualBox guest additions
+  config.vbguest.auto_update = true
+
   config.vm.provider "virtualbox" do |vb|
     # set cpu exectuion gab
     vb.customize ["modifyvm", :id, "--cpuexecutioncap", "#{CPUEXECUTIONCAP}"]
