--- a/pom.xml
+++ b/pom.xml
@@ -31,7 +31,7 @@
 
   <groupId>io.wcm.maven.archetypes</groupId>
   <artifactId>io.wcm.maven.archetypes.aem-confmgmt</artifactId>
-  <version>1.0.13-SNAPSHOT</version>
+  <version>1.0.12</version>
   <packaging>maven-archetype</packaging>
 
   <name>wcm.io Maven Archetype for AEM Configuration Management</name>
