--- a/src/test/resources/projects/alpha-all-nojdk/archetype.properties
+++ b/src/test/resources/projects/alpha-all-nojdk/archetype.properties
@@ -27,6 +27,9 @@ javaDownloadBaseUrl=auto
 sshPublicKeyFile=../id_rsa.pub
 aemLicensePropertiesFile=../license.properties
 
+# AEM version
+optionAemVersion=6.5
+
 # feature flags
 optionVagrant=y
 optionTerraform=y
