--- a/src/test/resources/projects/delta-no-terraform-no-vagrant-no-ansible/archetype.properties
+++ b/src/test/resources/projects/delta-no-terraform-no-vagrant-no-ansible/archetype.properties
@@ -27,6 +27,9 @@ javaDownloadBaseUrl=http://download.oracle.com/otn-pub/java
 sshPublicKeyFile=../id_rsa.pub
 aemLicensePropertiesFile=../license.properties
 
+# AEM version
+optionAemVersion=6.5
+
 # feature flags
 optionVagrant=n
 optionTerraform=n
