--- a/src/main/resources/archetype-resources/vagrant/Vagrantfile
+++ b/src/main/resources/archetype-resources/vagrant/Vagrantfile
@@ -11,6 +11,7 @@ CPUEXECUTIONCAP = 80
 RSYNC_EXCLUDES = [".git/",".idea/","target/"]
 
 HOSTNAME = "${configurationManagementName.replace('.','-')}-controlhost"
+ANSIBLE_VAULT_PASSWORD_FILE="shared/.vault_pass"
 
 # ssh port
 SSH_PORT = 22022
@@ -46,6 +47,36 @@ Vagrant.configure(VAGRANTFILE_API_VERSION) do |config|
 
     # set vm name
     vb.name = HOSTNAME
+  end
+
+  class CredentialPrompt
+    def initialize( msg )
+      @msg = msg
+    end
+    def to_s
+      begin
+        system 'stty -echo'
+        print @msg
+        pass = URI.escape(STDIN.gets.chomp)
+        ensure
+        system 'stty echo'
+        end
+        print "\n"
+      pass
+    end
+  end
+
+  # read ansible vault password file when not already configured
+  if !File.exist?(ANSIBLE_VAULT_PASSWORD_FILE)
+    config.vm.provision "shell",
+    env: {
+      "FILE_PATH" => "/vagrant/#{ANSIBLE_VAULT_PASSWORD_FILE}",
+      "ANSIBLE_VAULT_PASSWORD" => CredentialPrompt.new("Enter the Ansible Vault Password: ")
+      },
+    inline: <<-SHELL
+      touch $FILE_PATH
+      echo "$ANSIBLE_VAULT_PASSWORD" >> $FILE_PATH
+    SHELL
   end
 
   # provision base (credendials and basic os packages)
