Generate (random) Maven master password to encrypt maven settings in vagrant control host.

--- a/src/main/resources/archetype-resources/ansible/group_vars/all/vault_credentials.yml
+++ b/src/main/resources/archetype-resources/ansible/group_vars/all/vault_credentials.yml
@@ -4,6 +4,12 @@ vault_maven_repository_username: #if($mavenRepositoryUser!='__not_set__')${maven
 # Password for maven repository
 vault_maven_repository_password: #if($mavenRepositoryPassword!='__not_set__')${mavenRepositoryPassword}#end
 
+# Master password for Maven Password Encryption
+## --- Generate a random maven master password (use a UUID) ---
+#set( $str = "" )
+#set( $randomUUID = $str.getClass().forName("java.util.UUID").getMethod("randomUUID") )
+#set( $uuid = $randomUUID.invoke(null) )
+vault_controlhost_maven_master_password: ${uuid}
 
 # Password for AEM "admin" user and felix console
 vault_aem_admin_password: ${aemAdminPassword}
