--- a/src/main/resources/archetype-resources/vagrant/Vagrantfile
+++ b/src/main/resources/archetype-resources/vagrant/Vagrantfile
@@ -11,7 +11,8 @@ CPUEXECUTIONCAP = 80
 RSYNC_EXCLUDES = [".git/",".idea/","target/"]
 
 HOSTNAME = "${configurationManagementName.replace('.','-')}-controlhost"
-ANSIBLE_VAULT_PASSWORD_FILE = "/home/vagrant/.ansible/.vault_pass"
+ANSIBLE_VAULT_PASS_SRC = "shared/.vault_pass"
+ANSIBLE_VAULT_PASS_DEST = "/home/vagrant/.ansible/.vault_pass"
 
 # ssh port
 SSH_PORT = 22022
@@ -67,10 +68,10 @@ Vagrant.configure(VAGRANTFILE_API_VERSION) do |config|
   end
 
   # read ansible vault password file when not already configured
-  if !File.exist?(ANSIBLE_VAULT_PASSWORD_FILE)
+  if !File.exist?(ANSIBLE_VAULT_PASS_SRC)
     config.vm.provision "shell", privileged: false,
     env: {
-      "FILE_PATH" => ANSIBLE_VAULT_PASSWORD_FILE,
+      "FILE_PATH" => ANSIBLE_VAULT_PASS_DEST,
       "ANSIBLE_VAULT_PASSWORD" => CredentialPrompt.new("Enter the Ansible Vault Password: ")
       },
     inline: <<-SHELL
