AEM Crypto Keys: Do not decrypt them during configuration generation, this is done by Ansible automatically.

--- a/src/main/resources/archetype-resources/configuration/src/main/roles/__projectName__-aem-cms-combined.yaml
+++ b/src/main/resources/archetype-resources/configuration/src/main/roles/__projectName__-aem-cms-combined.yaml
@@ -13,6 +13,6 @@ config:
   crypto:
 #if ($optionAnsible=="y")
     # URLs of crypto keys to be deployed to AEM (as bundle files)
-    aesCryptoKeyUrl: ansible-vault:classpath:/crypto/master
-    hmacCryptoKeyUrl: ansible-vault:classpath:/crypto/hmac
+    aesCryptoKeyUrl: classpath:/crypto/master
+    hmacCryptoKeyUrl: classpath:/crypto/hmac
 #end
