--- a/src/main/resources/archetype-resources/.gitignore
+++ b/src/main/resources/archetype-resources/.gitignore
@@ -16,6 +16,7 @@ npm-debug.log
 .settings
 .externalToolBuilders
 .pmd
+.eclipse-pmd
 .checkstyle
 .idea
 .vagrant
@@ -28,6 +29,9 @@ npm-debug.log
 *.sublime-*
 *nbactions*.xml
 .temp/
+.vlt
+.vlt-sync*
+.brackets.json
 
 .terraform
 ansible/inventory/tmp/*.json
