Make archetype ready for CentOS 8 and Python3

--- a/src/main/resources/archetype-resources/ansible/group_vars/all/oracle-java.yml
+++ b/src/main/resources/archetype-resources/ansible/group_vars/all/oracle-java.yml
@@ -7,7 +7,7 @@ java_version: ${javaMajorVersion}
 #if( $javaMinorVersion!="0" )
 
 # java minor version
-java_subversion: ${javaMinorVersion}
+java_subversion: "${javaMinorVersion}"
 #end
 #if( $javaDownloadBaseUrl!="auto" )
 
