--- a/src/main/resources/archetype-resources/ansible/group_vars/local/conga_ansible_controlhost.yml
+++ b/src/main/resources/archetype-resources/ansible/group_vars/local/conga_ansible_controlhost.yml
@@ -6,3 +6,5 @@ controlhost_maven_repositories:
     url: "{{ maven_repository_url }}"
     username: "{{ vault_maven_repository_username }}"
     password: "{{ vault_maven_repository_password }}"
+
+controlhost_packages_pip_upgrade: false
