--- a/src/main/resources/archetype-resources/vagrant/Vagrantfile
+++ b/src/main/resources/archetype-resources/vagrant/Vagrantfile
@@ -56,6 +56,7 @@ Vagrant.configure(VAGRANTFILE_API_VERSION) do |config|
     ansible.provisioning_path = "/home/vagrant/projects/${configurationManagementName}/ansible"
     ansible.install = "false"
     ansible.compatibility_mode = "2.0"
+    ansible.extra_vars = { ansible_python_interpreter:"/usr/bin/python3" }
     # galaxy settings
     ansible.galaxy_role_file = "requirements.yml"
     ansible.galaxy_roles_path = "/home/vagrant/.ansible/roles"
