--- a/src/main/resources/archetype-resources/ansible/requirements.yml
+++ b/src/main/resources/archetype-resources/ansible/requirements.yml
@@ -8,9 +8,7 @@
 # wcm-io-devops requirements
 #
 - name: wcm_io_devops.aem_cms
-  src: https://github.com/wcm-io-devops/ansible-aem-cms.git
-  version: feature/centos8_support
-  #version: 1.2.0
+  version: 1.3.0
 - name: wcm_io_devops.aem_dispatcher
   src: https://github.com/wcm-io-devops/ansible-aem-dispatcher.git
   version: feature/update_dispatcher_version
