--- a/src/main/resources/archetype-resources/vagrant/Vagrantfile
+++ b/src/main/resources/archetype-resources/vagrant/Vagrantfile
@@ -8,8 +8,6 @@ CPUS = 4
 MEMORY = 8192
 CPUEXECUTIONCAP = 80
 
-RSYNC_EXCLUDES = [".git/",".idea/","target/"]
-
 HOSTNAME = "${configurationManagementName.replace('.','-')}-controlhost"
 ANSIBLE_VAULT_PASS_SRC = "shared/.vault_pass"
 ANSIBLE_VAULT_PASS_DEST = "/home/vagrant/.ansible/.vault_pass"
@@ -26,7 +24,7 @@ Vagrant.configure(VAGRANTFILE_API_VERSION) do |config|
   config.ssh.forward_agent = true
 
   # define sync folders
-  config.vm.synced_folder "../", "/home/vagrant/projects/${configurationManagementName}", create: false, type: "rsync", rsync__exclude: RSYNC_EXCLUDES, rsync__auto: true, rsync__args: ["--verbose", "--archive", "-z", "--copy-links"]
+  config.vm.synced_folder "../", "/home/vagrant/projects/${configurationManagementName}", create: false, mount_options: ["dmode=770"]
 
   # forwarded ports
   config.vm.network :forwarded_port, guest: 22, host: SSH_PORT, id: 'ssh'
