--- a/src/main/resources/archetype-resources/configuration/pom.xml
+++ b/src/main/resources/archetype-resources/configuration/pom.xml
@@ -6,7 +6,7 @@
   <parent>
     <groupId>io.wcm.maven</groupId>
     <artifactId>io.wcm.maven.aem-global-parent</artifactId>
-    <version>1.4.4</version>
+    <version>1.4.5-SNAPSHOT</version>
     <relativePath/>
   </parent>
 
