--- a/pom.xml
+++ b/pom.xml
@@ -52,6 +52,47 @@
     <tag>HEAD</tag>
   </scm>
 
+  <ciManagement>
+    <system>GitHub Actions</system>
+    <url>https://github.com/wcm-io/wcm-io-maven-archetype-aem-confmgmt/actions</url>
+  </ciManagement>
+  
+  <dependencies>
+
+    <!-- Workaround for resolving dependencies via Grapes on GitHub Actions - references them here as test deps as well -->
+    <dependency>
+      <groupId>org.codehaus.groovy</groupId>
+      <artifactId>groovy</artifactId>
+      <version>2.4.16</version>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.codehaus.groovy</groupId>
+      <artifactId>groovy-xml</artifactId>
+      <version>2.4.16</version>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>io.wcm.devops.conga.plugins</groupId>
+      <artifactId>io.wcm.devops.conga.plugins.aem</artifactId>
+      <version>1.8.14</version>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>io.wcm.devops.conga.plugins</groupId>
+      <artifactId>conga-aem-crypto-cli</artifactId>
+      <version>1.8.14</version>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>io.wcm.devops.conga.plugins</groupId>
+      <artifactId>io.wcm.devops.conga.plugins.ansible</artifactId>
+      <version>1.3.0</version>
+      <scope>test</scope>
+    </dependency>
+
+  </dependencies>
+
   <build>
     <extensions>
       <extension>
