--- a/.github/workflows/maven-deploy.yml
+++ b/.github/workflows/maven-deploy.yml
@@ -44,7 +44,7 @@ jobs:
         env:
           SONATYPE_USERNAME: ${{ secrets.SONATYPE_USERNAME }}
           SONATYPE_PASSWORD: ${{ secrets.SONATYPE_PASSWORD }}
-        run: mvn -s ./.maven-settings.xml -Pcontinuous-integration -B -U -Dmaven.test.skip.true clean deploy site
+        run: mvn -s ./.maven-settings.xml -Pcontinuous-integration -B -U -Dmaven.test.skip=true clean deploy site
 
       # Deploy site to Github Pages
       - name: Stage and deploy site
