--- a/src/main/resources/archetype-resources/vagrant/Vagrantfile
+++ b/src/main/resources/archetype-resources/vagrant/Vagrantfile
@@ -75,6 +75,7 @@ Vagrant.configure(VAGRANTFILE_API_VERSION) do |config|
       "ANSIBLE_VAULT_PASSWORD" => CredentialPrompt.new("Enter the Ansible Vault Password: ")
       },
     inline: <<-SHELL
+      mkdir -p `dirname $FILE_PATH`
       touch $FILE_PATH
       echo "$ANSIBLE_VAULT_PASSWORD" > $FILE_PATH
     SHELL
