Tell srsp.oracle-java to download from mirror

--- a/src/main/resources/archetype-resources/ansible/group_vars/all/oracle-java.yml
+++ b/src/main/resources/archetype-resources/ansible/group_vars/all/oracle-java.yml
@@ -7,9 +7,12 @@ java_version: ${javaMajorVersion}
 #if( $javaMinorVersion!="0" )
 
 # java minor version
-java_subversion: ${javaMinorVersion}
+java_subversion: '${javaMinorVersion}'
 #end
 #if( $javaDownloadBaseUrl!="auto" )
+
+# specify download source
+java_download_from: mirror
 
 # mirror for jdk downloads
 java_mirror: ${javaDownloadBaseUrl}
