WTOOL-78 switch to Maven 3.8.1 via maven wrapper as workaround for failing site/javadoc generation

--- a/.github/workflows/maven-build.yml
+++ b/.github/workflows/maven-build.yml
@@ -40,4 +40,4 @@ jobs:
 
       # Build & verify
       - name: Build and verify
-        run: mvn -s ./.maven-settings.xml -Pcontinuous-integration -B -U -Darchetype.test.settingsFile=./.maven-settings.xml -Dgroovy.grape.report.downloads=true clean verify
+        run: ./mvnw -s ./.maven-settings.xml -Pcontinuous-integration -B -U -Darchetype.test.settingsFile=./.maven-settings.xml -Dgroovy.grape.report.downloads=true clean verify
