--- a/pom.xml
+++ b/pom.xml
@@ -25,7 +25,7 @@
   <parent>
     <groupId>io.wcm.maven</groupId>
     <artifactId>io.wcm.maven.parent</artifactId>
-    <version>1.2.6</version>
+    <version>1.3.0-SNAPSHOT</version>
     <relativePath />
   </parent>
 
@@ -40,9 +40,7 @@
 
   <properties>
     <site.url.module.prefix>tooling/maven/archetypes/aem-confmgmt</site.url.module.prefix>
-    <maven.archetype.version>3.1.2</maven.archetype.version>
-    <!-- Control execution of archetype integration tests via -Pfast or -Dmaven.test.skip -->
-    <archetype.test.skip>${integrationtests.skip}</archetype.test.skip>
+    <maven.archetype.version>3.2.1</maven.archetype.version>
   </properties>
 
   <scm>
@@ -59,13 +57,6 @@
   
   <dependencies>
 
-    <!-- Workaround for resolving dependencies via Grapes on GitHub Actions - references them here as test deps as well -->
-    <dependency>
-      <groupId>org.codehaus.groovy</groupId>
-      <artifactId>groovy-xml</artifactId>
-      <version>2.4.21</version>
-      <scope>test</scope>
-    </dependency>
     <dependency>
       <groupId>io.wcm.devops.conga.plugins</groupId>
       <artifactId>conga-aem-crypto-cli</artifactId>
